# SynthBrain

./: playground.ipynb  pyproject.toml  readme.md
src/: constants.py  dataset.py  main.py  model.py  utils.py
src/models/: wdcgan.py
